Finalizing design throughout all views

--- a/_public_html_exp/themes/cerulean/css/site.css
+++ b/_public_html_exp/themes/cerulean/css/site.css
@@ -231,3 +231,9 @@ hr.article-devider {
 	padding-top: 8px;
 	font-size: 90%;
 }
+.pagination > li > a {
+	padding: 2px 6px;
+}
+.panel-table-data {
+	padding: 0px 15px;
+}
