--- a/_public_html_exp/themes/cerulean/css/bootstrap.css
+++ b/_public_html_exp/themes/cerulean/css/bootstrap.css
@@ -4170,11 +4170,17 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-nav > li > a {
 	font-size: 12px;
-	padding: 13px 15px;
+	padding: 8px 15px;
 	color: #CCDDCC;
 	font-weight: bold;
 	line-height: normal;
-}
+	
+    background: #007700;
+    border-radius: 5px 5px 0 0;
+    margin: 10px 1em 0 0;
+    padding: 8px 15px;
+}	
+
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
 	background-color: #004400;
@@ -4193,6 +4199,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #ffffff;
+	background: #009900;
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
