--- a/_public_html_exp/css/staring.css
+++ b/_public_html_exp/css/staring.css
@@ -134,3 +134,38 @@
   -moz-osx-font-smoothing: grayscale;
   content: "\e084";
 }
+
+#waitingScreen p {
+	max-width: 800px;
+	font-size: 1.2em;
+}
+
+
+#waitingScreen h4 {
+	max-width: 800px;
+	font-size: 1.4em;
+}
+
+#waitingScreen ol {
+	list-style: none outside none;
+	font-family: Verdana,Helvetica,Arial,sans-serif;
+	margin: 1.5em;
+	padding: 0;
+	position:relative;
+	font-size: 1.1em;
+}
+
+#waitingScreen ol li {
+	display: block;
+	max-width: 720px;
+	margin: 0 0 1px 0;
+	padding: 12px 24px;
+	position:relative;
+	border-radius:4px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border: 0 none;
+	background:#484;
+	color: #EEFFEE;
+}
+
