--- a/_public_html_exp/themes/cerulean/css/site.css
+++ b/_public_html_exp/themes/cerulean/css/site.css
@@ -180,6 +180,13 @@ div.required label:after {
     padding-left:1em;
 }
 
+.mainTitle {
+	font-size:3em;
+	font-weight:100;
+	color:#ccc9cc;
+}
+
+
 hr.top {
     margin-top: 0px;
     border-width: 1px;
