--- a/_public_html_exp/css/staring.css
+++ b/_public_html_exp/css/staring.css
@@ -3,11 +3,14 @@
 	background-repeat:none;
 }
 
-#showError,
+#dropoutError,
 #videoContainer,
 #beginExperiment,
 #trialContainer,
-#subjectDeterimation {
+#subjectDeterimation,
+#autoStartWarning,
+#observerCommand,
+#limitNotice {
   display: none;
 }
 
@@ -74,6 +77,22 @@
     font-size: 1.8em;
     color:#888;
 }
+
+
+#observerCommand {
+	position:relative;
+    margin: 1.5em;
+    text-align:center;
+    z-index: 100;
+}
+
+#observerCommand b {
+    display: inline-block;
+    font-size: 1.8em;
+    margin: 0;
+    vertical-align: middle;
+}
+
 
 #trialInformation {
     font-style:bold;
@@ -168,4 +187,3 @@
 	background:#484;
 	color: #EEFFEE;
 }
-
