--- a/_public_html_exp/backend/themes/yeti/css/site.css
+++ b/_public_html_exp/backend/themes/yeti/css/site.css
@@ -249,10 +249,17 @@ hr.article-devider {
     padding: 0;
 }
 
-.panel {
+.panel,
+.panel-footer {
 	background: none;
+	border: none;
 }
+
+
+
+
 
 .pagination {
 	margin: 0px !important;
 }
+
